--- a/04-QueMePongo4/pom.xml
+++ b/04-QueMePongo4/pom.xml
@@ -25,6 +25,12 @@
       <version>5.7.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.10.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
